--- a/test-output/old/Add a Schema/methods-not-run.html
+++ b/test-output/old/Add a Schema/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>NavigatorCore.AddSchemaToTheViewlet.DeleteSchema</td></tr>
+<tr><td>NavigatorCore.AddSchemaToTheViewlet.MoveDownButton</td></tr>
+<tr><td>NavigatorCore.AddSchemaToTheViewlet.AddSchema</td></tr>
+<tr><td>NavigatorCore.AddSchemaToTheViewlet.MoveUpButton</td></tr>
 </table>
