--- a/test-output/old/Navigator/methods-not-run.html
+++ b/test-output/old/Navigator/methods-not-run.html
@@ -1,9 +1,10 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.ChannelAuthProperties</td></tr>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.DeleteChannelAuthRecordFromCommands</td></tr>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.MQSCSnapshot</td></tr>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.DeleteMultipleChannelAuthRecordsFromCommands</td></tr>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.ChannelAuthEvents</td></tr>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.SaveChannelAuthSnapshot</td></tr>
-<tr><td>ApodGUI.ChannelAuthRecordsViewlet.CreateChannelAuthRecordFromOptions</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowTemporaryDynamicQueues</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowObjectSearchresultsFromActiveManagersOnly</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowFullNamesForSearchResultsObjects</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowSystemObjectsOnly</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowLogoutWindow</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowManagersForDefaultSchemas</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowFullNamesForFavoriteShortcuts</td></tr>
+<tr><td>NavigatorCore.NavigatorSettings.ShowEmptyQueuesCheckbox</td></tr>
 </table>
