--- a/test-output/old/Navigator/methods.html
+++ b/test-output/old/Navigator/methods.html
@@ -1,46 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Navigator</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 14:59:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ChannelAuthRecordsViewlet.beforeTest()[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 14:59:49</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">Login</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:01:09</td>   <td>80250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:01:09</td>   <td>80851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.AddChannelAuthrecordsViewlet(java.lang.String, int, org.testng.ITestContext)[pri:1, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">AddChannelAuthrecordsViewlet</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:02:01</td>   <td>132452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:02:04</td>   <td>135666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.AddToFavoriteViewlet(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:8, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">AddToFavoriteViewlet</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:03:20</td>   <td>211185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:03:23</td>   <td>214065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.CreateChannelAuthRecordFromPlusIcon(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:9, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">CreateChannelAuthRecordFromPlusIcon</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:05:09</td>   <td>320311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:05:12</td>   <td>323083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.CompareChannelAuths(org.testng.ITestContext)[pri:10, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">CompareChannelAuths</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:05:48</td>   <td>359671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:05:52</td>   <td>363190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.CheckDifferencesForChannelAuths(org.testng.ITestContext)[pri:11, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">CheckDifferencesForChannelAuths</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:06:25</td>   <td>396467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:06:28</td>   <td>399288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.MultipleChannelAuthRecordsProperties(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:13, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">MultipleChannelAuthRecordsProperties</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:08:06</td>   <td>497652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:08:09</td>   <td>500697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.AddToFavoriteForMultipleChannelAuthRecords(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:14, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">AddToFavoriteForMultipleChannelAuthRecords</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:08:56</td>   <td>547195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:08:59</td>   <td>550409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.ShowObjectAttributes(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:15, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">ShowObjectAttributes</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:11:53</td>   <td>724181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:11:56</td>   <td>726958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChannelAuthRecordsViewlet.Logout(java.lang.String)[pri:16, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">Logout</td> 
-  <td>main@1661210650</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/18 15:12:23</td>   <td>754716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChannelAuthRecordsViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ChannelAuthRecordsViewlet@4b5189ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1661210650</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:05:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NavigatorSettings.beforeTest()[pri:0, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451460284</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:05:53</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigatorSettings.Login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">Login</td> 
+  <td>main@451460284</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:08:47</td>   <td>173671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigatorSettings.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@451460284</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:08:48</td>   <td>175193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigatorSettings.ShowInActiveChannelsCheckbox(org.testng.ITestContext)[pri:1, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">ShowInActiveChannelsCheckbox</td> 
+  <td>main@451460284</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:09:22</td>   <td>208929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigatorSettings.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@451460284</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:09:23</td>   <td>210302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigatorSettings.Logout(java.lang.String)[pri:10, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">Logout</td> 
+  <td>main@451460284</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:10:02</td>   <td>249298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigatorSettings.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.NavigatorSettings@52e7a6b2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@451460284</td>   <td></td> </tr>
 </table>
