--- a/test-output/old/Navigator/classes.html
+++ b/test-output/old/Navigator/classes.html
@@ -4,70 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ApodGUI.ChannelAuthRecordsViewlet</td>
+<td>NavigatorCore.NavigatorSettings</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CompareChannelAuths</td>
+<td>ShowLogoutWindow</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CheckDifferencesForChannelAuths</td>
+<td>ShowObjectSearchresultsFromActiveManagersOnly</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ChannelAuthProperties</td>
+<td>ShowFullNamesForFavoriteShortcuts</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteChannelAuthRecordFromCommands</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Logout</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>MQSCSnapshot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateChannelAuthRecordFromPlusIcon</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>MultipleChannelAuthRecordsProperties</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>SaveChannelAuthSnapshot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ShowObjectAttributes</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddToFavoriteViewlet</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ChannelAuthEvents</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddToFavoriteForMultipleChannelAuthRecords</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DeleteMultipleChannelAuthRecordsFromCommands</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddChannelAuthrecordsViewlet</td>
+<td>ShowSystemObjectsOnly</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -75,7 +31,27 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateChannelAuthRecordFromOptions</td>
+<td>ShowTemporaryDynamicQueues</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Logout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ShowInActiveChannelsCheckbox</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ShowFullNamesForSearchResultsObjects</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ShowManagersForDefaultSchemas</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ShowEmptyQueuesCheckbox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
