--- a/test-output/old/Testing Navigator Dashboard/methods-alphabetical.html
+++ b/test-output/old/Testing Navigator Dashboard/methods-alphabetical.html
@@ -1,22 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Testing Navigator Dashboard</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:29:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.ActiveFilterInBrowseMessagePage(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.SearchCriteria@6b6776cb]">ActiveFilterInBrowseMessagePage</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:28:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.ActiveFilterInBrowseMessagePage(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.SearchCriteria@6b6776cb]">ActiveFilterInBrowseMessagePage</td> 
   <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:28:40</td>   <td>-70258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.AddSearchCriteriaCondition(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.SearchCriteria@6b6776cb]">AddSearchCriteriaCondition</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:27:15</td>   <td>-80649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.AddSearchCriteriaCondition(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.SearchCriteria@6b6776cb]">AddSearchCriteriaCondition</td> 
   <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:26:37</td>   <td>-192947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.Login(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">Login</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:24:34</td>   <td>-241539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.Login(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">Login</td> 
   <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:27:55</td>   <td>-115311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.PutAmessageIntoQueue(java.lang.String, java.lang.String)[pri:1, instance:NavigatorCore.SearchCriteria@6b6776cb]">PutAmessageIntoQueue</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:29:28</td>   <td>51802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.Logout(java.lang.String)[pri:20, instance:NavigatorCore.SearchCriteria@6b6776cb]">Logout</td> 
   <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:26:37</td>   <td>-192960</td> <td>&nbsp;</td><td title="&gt;&gt;SearchCriteria.beforeTest()[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:26:26</td>   <td>-130152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCriteria.PutAmessageIntoQueue(java.lang.String, java.lang.String)[pri:1, instance:NavigatorCore.SearchCriteria@6b6776cb]">PutAmessageIntoQueue</td> 
+  <td>main@684822005</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:24:34</td>   <td>-241561</td> <td>&nbsp;</td><td title="&gt;&gt;SearchCriteria.beforeTest()[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:27:54</td>   <td>-115566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:26:25</td>   <td>-130642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:28:40</td>   <td>-70483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:27:15</td>   <td>-80856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:29:47</td>   <td>-2884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:28:35</td>   <td>-1423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@684822005</td>   <td></td> </tr>
-<tr bgcolor="8ab9e6">  <td>22/02/11 19:30:58</td>   <td>68125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:29:26</td>   <td>50431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@684822005</td>   <td></td> </tr>
+<tr bgcolor="8ab9e6">  <td>22/02/24 12:29:55</td>   <td>78731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchCriteria.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.SearchCriteria@6b6776cb]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@684822005</td>   <td></td> </tr>
 </table>
