--- a/test-output/old/Navigator/reporter-output.html
+++ b/test-output/old/Navigator/reporter-output.html
@@ -1,19 +1,23 @@
 <h2>Reporter output</h2><table><tr><td><br/></td></tr>
 <tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/Login.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CreateWGSDashboard.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddCommInfoViewlet.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CreateEMSDashboard.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/Properties.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/SetAsDeafaultOption.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CopyAsOfCommumicationInfo.png" alt="""/" /></td></tr>
+<tr><td>Screenshots/ScreenshotsFailure/DeleteCommunicationInfo.png</td></tr>
+<tr><td><br/>Failed to execute method: DeleteCommunicationInfo<br/></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/SetASDefaultTemplate.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsFailure/DeleteCommunicationInfo.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/RenameDashboard.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddCommunicationInfoToFavoriteViewlet.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/DeleteDashboardUsingCrossIcon.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CompareCommunicationInfos.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/DeleteDashboardUsingDeleteOption.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/DifferencesOfCommunicationInfos.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/RemoveDashboardUsingOption.png" alt="""/" /></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddMultipleCommumicationInfosToFavoriteViewlet.png" alt="""/" /></td></tr>
+<tr><td><br/></td></tr>
+<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/ShowObjectAttributes.png" alt="""/" /></td></tr>
 </table>
