--- a/test-output/old/Navigator/classes.html
+++ b/test-output/old/Navigator/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>NavigatorCore.DashboardOptions</td>
+<td>ApodGUI.CommInfoViewlet</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteDashboardUsingDeleteOption</td>
+<td>ShowObjectAttributes</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>RenameDashboard</td>
+<td>CopyAsOfCommumicationInfo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>SetASDefaultTemplate</td>
+<td>Properties</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -27,27 +27,35 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>AddMultipleCommumicationInfosToFavoriteViewlet</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>Login</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateWGSDashboard</td>
+<td>DeleteCommunicationInfo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateEMSDashboard</td>
+<td>AddCommunicationInfoToFavoriteViewlet</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>SetAsDeafaultOption</td>
+<td>DifferencesOfCommunicationInfos</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>RemoveDashboardUsingOption</td>
+<td>AddCommunicationInfoUsingPlusIcon</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteDashboardUsingCrossIcon</td>
+<td>AddCommInfoViewlet</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>CompareCommunicationInfos</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
